# classify-stock-growth-for-trading

./: .env.sample  .gitignore  CLAUDE.md  Makefile  README-detailed.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_etl.py
.claude/: progress-summary.md  prompt-01.md
.temp/: temp.txt
data/: xtb_stock_analysis_data.csv
docker/airflow/: Dockerfile  requirements.txt
docs/: ML_Pipeline_Validation.ipynb  erd-normalized-approach.md  erd-unified-approach.md  feature_engineering_analysis.md  progress-summary.md  random_forest_training_plan.md  stock_visualization_analysis.ipynb
docs/knowledge_base/: advanced_chart_integration_plan.md  database-design-comparison.md  erd-normalized-approach.md  makefile_web_app_commands_summary.md  ml-analytics-tab-implementation-plan.md  ml_dag_multi_environment_implementation_plan.md  ml_pipeline_integration_plan_updated.md  react_web_app_development_plan.md  talib_feature_engineering_guide.md
docs/knowledge_base/dataframe_schemas/: step02_feature_engineering_output_bdx.md  step02_feature_engineering_output_cdr.md  step02_feature_engineering_output_dvl.md  step02_feature_engineering_output_elt.md  step02_feature_engineering_output_gpw.md  step02_feature_engineering_output_kty.md  step02_feature_engineering_output_plw.md  step02_feature_engineering_output_pzu.md  step02_feature_engineering_output_rbw.md  (+1 more)
docs/prompts/: prompt-02.md
scripts/: document_all_instruments.py  extract-credentials.sh  setup-airflow-connections.sh
sql/: 01_dev_schema_normalized.sql  03_test_schema_normalized.sql  dev_dummy_data.sql  init-databases.sql  schema_template.sql.j2  schema_template.sql.j2.backup
stock_etl/: __init__.py  cli.py
stock_etl/airflow_dags/: stock_etl_dag.py  stock_ml_dag.py
stock_etl/core/: __init__.py  database.py  models.py
stock_etl/data/: __init__.py  stooq_extractor.py
stock_etl/database/: __init__.py  operations.py
stock_etl/utils/: __init__.py  dag_utils.py  polish_trading_calendar.py
stock_ml/: __init__.py  backtesting.py  complete_pipeline.py  data_extractor.py  database_operations.py  feature_engineering.py  logging_config.py  model_trainer.py  model_trainer_optimized.py  preprocessing.py  schema_validator.py  test_pipeline.py
web-app/: docker-compose.yml
web-app/backend/: .dockerignore  Dockerfile  package.json  simple-server.js  tsconfig.json
web-app/frontend/: .dockerignore  Dockerfile  package.json  tailwind.config.js
(+43 files in other folders)
