[project]
name = "classify-stock-growths-for-trading"
version = "0.1.0"
description = "Stock data ETL pipeline with PostgreSQL and Airflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0",
    "pandas-datareader>=0.10.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy[asyncio]>=1.4.49,<2.0.0",
    "apache-airflow>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "plotly>=5.17.0",
    "numpy>=1.26.0",
    "holidays>=0.34",
    "scikit-learn>=1.3.0",
    "TA-Lib>=0.4.25",
    "imbalanced-learn>=0.11.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "jupyterlab>=4.4.6",
]

[project.scripts]
stock-etl = "stock_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_etl"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

